# Image-Editor

./: .gitignore  LICENSE  run_project.sh
Code/: CMakeLists.txt  main.cpp
Code/App/: run_Mosaic.cpp
Code/Data/Image/: Image.cpp  Image.hpp  io.cpp  io.hpp  stb_image_write.h
Code/Modules/Mosaic/: Mosaic.cpp  Mosaic.hpp  test.cpp  test.hpp
Code/Routines/Mosaic/: Mosaic.cpp  Mosaic.hpp
Code/Utils/Geometry/: geometry.hpp
Code/Utils/Graphics/: graphics.cpp  graphics.hpp
Code/Utils/Image/: imageTest.cpp  imageTest.hpp  io.cpp  io.hpp
Code/Utils/ImageProcess/: imageProcess.cpp  imageProcess.hpp  imageProcessTest.cpp  imageProcessTest.hpp
Code/Utils/Interface/: Interface.cpp  Makefile
Code/Utils/Random/: random.hpp
Test/Modules/Mosaic/: MosaicTest.cpp  MosaicTest.hpp
Test/Routines/Mosaic/: MosaicTest.cpp  MosaicTest.hpp
Test/Utils/Geometry/: geometryTest.cpp  geometryTest.hpp
Test/Utils/Graphics/: graphicsTest.cpp  graphicsTest.hpp
Test/Utils/ImageProcess/: ImageProcessTest.cpp  ImageProcessTest.hpp
Test/routines/mosaic/: mosaic_test.cpp
Test/utils/geometry/: geometry_test.hpp
Test/utils/image_process/: image_process_test.cpp  image_process_test.hpp
src/: CMakeLists.txt  main.cpp
src/app/: app.cpp  app.hpp  run_mosaic.cpp  run_mosaic.hpp  run_pipelines.cpp  run_pipelines.hpp  run_pop_art.cpp  run_pop_art.hpp  run_routines.cpp  run_routines.hpp  tempCodeRunnerFile.cpp
src/data/image/: image.cpp  image.hpp  io.cpp  io.hpp  iterator.hpp  primitives.hpp  stb_image.h
src/data/shapes/: shapes.hpp
src/functions/filter/: blur.cpp  blur.hpp  color.cpp  color.hpp  edge.cpp  edge.hpp
src/functions/graphics/: graphics.cpp  graphics.hpp  line.cpp  line.hpp  polygon.cpp  polygon.hpp
src/functions/math/: constants.hpp  geometry.cpp  geometry.hpp  kernel.cpp  kernel.hpp  sequence.cpp  sequence.hpp
src/functions/random/: random.cpp  random.hpp
src/functions/transform/: resize.cpp  resize.hpp
src/pipelines/grid/: grid.cpp  grid.hpp
src/pipelines/mosaic/: mosaic.cpp  mosaic.hpp
src/pipelines/pixelate/: pixelate.cpp  pixelate.hpp
src/pipelines/pop_art/: pop_art.cpp  pop_art.hpp
src/routines/grid/: grid.cpp  grid.hpp
src/routines/mosaic/: mosaic.cpp  mosaic.hpp
src/routines/pixelate/: pixelate.cpp  pixelate.hpp
src/routines/pop_art/: pop_art.cpp  pop_art.hpp
src/utils/filter/: blur.cpp  blur.hpp  color.cpp  color.hpp
src/utils/geometry/: geometry.hpp
src/utils/graphics/: graphics.cpp  graphics.hpp  line.cpp  line.hpp  polygon.cpp  polygon.hpp
src/utils/image_process/: imageProcess.cpp  imageProcess.hpp
src/utils/math/: geometry.cpp  geometry.hpp  sequence.cpp  sequence.hpp  tempCodeRunnerFile.cpp
src/utils/random/: random.cpp  random.hpp
src/utils/transform/: resize.cpp  resize.hpp
src/variants/math/: sequence_variants.hpp
test/legacy/: base_test.hpp  mosaic_test.cpp  mosaic_test.hpp
test/routines/mosaic/: mosaic_test.hpp
test/unit/: unit_test_main.cpp  unit_test_main.hpp
test/unit/tests/: iterator_unit_test.cpp  iterator_unit_test.hpp
test/utils/geometry/: geometry_test.cpp
test/utils/graphics/: graphics_test.cpp  graphics_test.hpp
test/workbench/: iterator_examples.cpp  logger.cpp  logger.hpp  workbench_main.cpp  workbench_main.hpp
test/workbench/examples/: functions_workbench.cpp  functions_workbench.hpp  grid_workbench.cpp  grid_workbench.hpp  image_workbench.cpp  image_workbench.hpp  iterator_examples.cpp  iterator_examples.hpp  pipeline_workbench.cpp  pipeline_workbench.hpp  pixelate_workbench.cpp  pixelate_workbench.hpp  tempCodeRunnerFile.cpp  variants_workbench.cpp  variants_workbench.hpp
